Added Basic Badge Testing
